--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
+    "axios": "^1.1.3",
+    "element-plus": "^2.2.20",
     "pinia": "^2.0.21",
     "vue": "^3.2.38",
+    "vue-demi": "^0.13.11",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.3",
-    "vite": "^3.0.9"
+    "vite": "^3.0.9",
+    "vite-plugin-cdn-import": "^0.3.5"
   }
 }
