--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.3",
+    "sass": "^1.56.1",
     "vite": "^3.0.9",
     "vite-plugin-cdn-import": "^0.3.5"
   }
