--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
+    "@kangc/v-md-editor": "^2.3.15",
     "axios": "^1.1.3",
     "element-plus": "^2.2.20",
+    "highlight.js": "^11.6.0",
     "pinia": "^2.0.21",
     "vue": "^3.2.38",
     "vue-demi": "^0.13.11",
